syntax = "proto3";
package assetchangelog.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "pagin.proto";

option go_package = "hope/api/novel/assetchangelog/v1;v1";

// The AssetChangeLog service definition.
service AssetChangeLog {

  // 分页查询AssetChangeLog
  rpc GetAssetChangeLogPage (AssetChangeLogPageReq) returns (AssetChangeLogPageReply)  {
    option (google.api.http) = {
      get: "/v1/asset/change/log/page"
    };
  }

  // 获取AssetChangeLog
  rpc GetAssetChangeLog (AssetChangeLogReq) returns (AssetChangeLogReply)  {
    option (google.api.http) = {
      get: "/v1/asset/change/log/{id}"
    };
  }

  // 更新AssetChangeLog
  rpc UpdateAssetChangeLog (AssetChangeLogUpdateReq) returns (AssetChangeLogUpdateReply)  {
    option (google.api.http) = {
      put: "/v1/asset/change/log/{id}"
      body: "*"
    };
  }

  // 创建AssetChangeLog
  rpc CreateAssetChangeLog (AssetChangeLogCreateReq) returns (AssetChangeLogCreateReply)  {
    option (google.api.http) = {
      post: "/v1/asset/change/log"
      body: "*"
    };
  }

  // 删除AssetChangeLog
  rpc DeleteAssetChangeLog (AssetChangeLogDeleteReq) returns (AssetChangeLogDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/asset/change/log/{id}"
    };
  }

  // 批量删除AssetChangeLog
  rpc BatchDeleteAssetChangeLog (AssetChangeLogBatchDeleteReq) returns (AssetChangeLogDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/asset/change/log"
    };
  }

}

// 实体数据
message AssetChangeLogData {
    int64 id = 1;
    //订单号
    string orderId = 2;
    //账本ID
    int64 balanceId = 3;
    //关联用户事件Id
    int64 eventId = 4;
    //用户ID
    int64 userId = 5;
    //账本科目
    int32 assetItemId = 6;
    //变化金额
    int64 amount = 7;
    //变化前剩余可用
    int64 oldBalance = 8;
    //变化后剩余可用
    int64 newBalance = 9;
    //备注
    string remark = 10;
    //创建时间
    google.protobuf.Timestamp createdAt = 11;
    //更新时间
    google.protobuf.Timestamp updatedAt = 12;
    //创建者
    int64 createBy = 13;
    //更新者
    int64 updateBy = 14;
    //租户
    int64 tenantId = 15;

}

// 查询搜索请求
message AssetChangeLogPageReq {
    //分页查询参数
    pagin.Pagination pagin = 1;
    //查询条件参数
    AssetChangeLogReq param = 2;
}

// 查询搜索返回
message AssetChangeLogPageReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 总条数
    int64 total = 3;
    // 查询数据
    repeated AssetChangeLogData items = 4;
}


// 查询搜索请求
message AssetChangeLogReq {
    int64 id = 1;
    //订单号
    string orderId = 2;
    //账本ID
    int64 balanceId = 3;
    //关联用户事件Id
    int64 eventId = 4;
    //用户ID
    int64 userId = 5;
    //账本科目
    int32 assetItemId = 6;
    //变化金额
    int64 amount = 7;
    //变化前剩余可用
    int64 oldBalance = 8;
    //变化后剩余可用
    int64 newBalance = 9;
    //备注
    string remark = 10;
    //创建时间
    google.protobuf.Timestamp createdAt = 11;
    //更新时间
    google.protobuf.Timestamp updatedAt = 12;
    //创建者
    int64 createBy = 13;
    //更新者
    int64 updateBy = 14;
    //租户
    int64 tenantId = 15;

}

// 查询返回
message AssetChangeLogReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果数据
    AssetChangeLogData result = 3;
}

// 创建AssetChangeLog请求
message AssetChangeLogCreateReq {
    //订单号
    string orderId = 1;
    //账本ID
    int64 balanceId = 2;
    //关联用户事件Id
    int64 eventId = 3;
    //用户ID
    int64 userId = 4;
    //账本科目
    int32 assetItemId = 5;
    //变化金额
    int64 amount = 6;
    //变化前剩余可用
    int64 oldBalance = 7;
    //变化后剩余可用
    int64 newBalance = 8;
    //备注
    string remark = 9;

}

// 创建AssetChangeLog返回
message AssetChangeLogCreateReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果数据
    AssetChangeLogData result = 3;
}

// 更新AssetChangeLog请求
message AssetChangeLogUpdateReq {
    int64 id = 1;
    //订单号
    string orderId = 2;
    //账本ID
    int64 balanceId = 3;
    //关联用户事件Id
    int64 eventId = 4;
    //用户ID
    int64 userId = 5;
    //账本科目
    int32 assetItemId = 6;
    //变化金额
    int64 amount = 7;
    //变化前剩余可用
    int64 oldBalance = 8;
    //变化后剩余可用
    int64 newBalance = 9;
    //备注
    string remark = 10;

}


// 更新AssetChangeLog返回
message AssetChangeLogUpdateReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果数据
    AssetChangeLogData result = 3;
}

// 删除AssetChangeLog请求
message AssetChangeLogDeleteReq {
    int64 id = 1;
}


// 批量删除AssetChangeLog请求
message AssetChangeLogBatchDeleteReq {
    repeated int64 ids = 1;
}


// 删除AssetChangeLog返回
message AssetChangeLogDeleteReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果
    bool result = 3;
}

